--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,12 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.1</version>
+        </dependency>
     </dependencies>
     <organization>
         <name>EPAM Systems</name>
