--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,11 @@
             <artifactId>javax.annotation-api</artifactId>
             <version>1.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>1.2.5.RELEASE</version>
+        </dependency>
     </dependencies>
     <organization>
         <name>EPAM Systems</name>
